fix: align primary scene tooltip

--- a/sass/editor/_editor-main.scss
+++ b/sass/editor/_editor-main.scss
@@ -4288,7 +4288,17 @@ strong {
                     font-size: 16px;
                     line-height: 20px;
                     box-shadow: none;
+                    position: relative;
                     transition: color 100ms;
+
+                    > .primary-tooltip-anchor {
+                        position: absolute;
+                        top: 50%;
+                        left: 0;
+                        width: 100%;
+                        height: 0;
+                        pointer-events: none;
+                    }
 
                     &:not(.disabled):hover {
                         color: $text-dark;
